src/main/java/com/example/back/global/error/exception/dto/response/TokenResponse.java
package com.example.back.global.error.exception.dto.response;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class TokenResponse {

    private final String accessToken;
}
